# level2-3-recsys-finalproject-recsys-05

./: .env.example  .gitignore  Makefile  README.md  docker-spark-cluster.Dockerfile  embedding.ipynb  latent_factor_by_user.ipynb  match_crawling.ipynb  match_crawling.py  spark-docker-compose.yaml
SAS/: config.yaml  nohup.out  run.py  (+7 more)
inference/: README.md  api.py  config.py  dynamo.py  index2name.json  load_model.py  main.py  name2idx.json  pyproject.toml  schemas.py
inference/matrix/: play_matrix.npy  self_winrate.npy  win_rate.npy
inference/models/: champion_name_key.json  dataset.py  inference.py  main.py  matrix.py  model.joblib  test.ipynb
inference/models/SAS/: cfg.py  config.yaml  inference.py  test.ipynb
web/: README.md  league_entry.py  package-lock.json  package.json  pyproject.toml
web/project/: jinja2conf.py
web/project/app/: models.py  riot_assets.py  riot_client.py  serializers.py  urls.py  views.py
web/project/app/migrations/: 0001_initial.py  0002_champion.py  0003_summoner.py  0004_leagueentry.py  0005_leagueentry_unique_league_entry.py  0006_summoner_app_summone_name_9a15eb_idx.py  0007_summoner_account_id_summoner_profile_icon_id_and_more.py  0008_duomatch.py
web/project/auth/: forms.py  urls.py  views.py
web/project/project/: settings.py  urls.py
web/project/project/middleware/: user_activity_logger.py
web/project/static/css/: home.css  login.css
web/project/static/js/: home.js
web/project/templates/: index.html  privacy_policy.html  riot.txt  terms_of_service.html
web/project/users/: admin.py  models.py  urls.py  views.py
(+93 files in other folders)
